# 417lang

./: Cargo.toml  GRAMMAR.md  README.md  build.sh  index.html  index.js  presentation.md  run.sh
interpreter/: Cargo.toml  index.html  index.js
interpreter/pkg/: interpreter.d.ts  interpreter.js  interpreter_bg.wasm  interpreter_bg.wasm.d.ts  package.json
interpreter/src/: environment.rs  error.rs  functions.rs  interpreter.rs  lib.rs  main.rs  reader.rs
parser/: Cargo.toml  fact.417
parser/src/: error.rs  lexer.rs  lib.rs  main.rs  parser.rs
snippets/: add.417  cp5ex3.417  def.417  factorial.417  helloworld.417  multi_assignment.417  sort.417
src/: environment.rs  functions.rs  interpreter.rs  main.rs  reader.rs  repl.rs  types.rs
