[package]
name = "interpreter"
authors = ["Sammy Shea", "sgshea@ncsu.edu"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
parser = ["dep:parser"]

[dependencies]
# json parsing
serde = "1.0"
serde_json = "1.0"
# For wasm
wasm-bindgen = "0.2.82"

parser = { path = "../parser", optional = true}

[profile.release]
# optimize for small code
opt-level = "s"